--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -2,7 +2,7 @@
 
 @import "scss/scss/bootstrap";
 
-/* Estilos de SASS*/
+/* Estilos de SASS modificando bootsrap*/
 
 a {
     color: black !important;
