--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -31,3 +31,10 @@ a:hover {
     margin-bottom: 0;
     font-size: 1rem;
 }
+
+.mapa {
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    height: 500px;
+}
